# yesod-fast-devel

./: .gitignore  .travis.yml  LICENSE  Main.hs  README.md  stack.yaml  yesod-fast-devel.cabal
