name:                yesod-fast-devel
version:             0.1.0.0
synopsis:            File watcher and yesod-devel launcher for fast recompilation
license:             BSD3
license-file:        LICENSE
author:              Arne Link
maintainer:          mail@arne-link.de
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable yesod-fast-devel
  default-extensions: OverloadedStrings
  main-is:             Main.hs
  build-depends: base >=4.7 && <5
               , filepath >= 1.4.0.0
               , fsnotify >= 0.1.0.0
               , Glob >= 0.7
               , process >= 1.2.0.0
               , stm >= 2.1.1.0
               , system-filepath
               , temporary >= 1.2.0.0
               , text >= 1.2.0.0
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
