name:                yesod-fast-devel
version:             0.1.0.0
synopsis:            Fast live-reloading for yesod applications.
license:             BSD3
license-file:        LICENSE
author:              Arne Link, Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10
data-files:          PatchedDevelMain.hs
                   , OriginalDevelMain.hs

executable yesod-fast-devel
  default-extensions: OverloadedStrings, LambdaCase
  main-is:            Main.hs
  build-depends: Glob >= 0.7
               , base >=4.7 && <5
               , bytestring >= 0.10.6.0
               , directory >= 1.2.2.0
               , filepath >= 1.4.0.0
               , fsnotify >= 0.1.0.0
               , process >= 1.2.0.0
               , pureMD5 >= 2.1
               , stm >= 2.1.1.0
               , system-filepath
               , temporary >= 1.2.0.0
               , text >= 1.2.0.0
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
